[package]
name = "reth-bsc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
reth-cli.workspace = true
reth-node-core.workspace = true
reth-bsc-chainspec.workspace = true

eyre.workspace = true
clap = { workspace = true, features = ["derive", "env"] }

[lints]

[features]
bsc = []