[package]
name = "reth-optimism-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-consensus-common.workspace = true
reth-primitives.workspace = true
reth-consensus.workspace = true
log = "0.4.21"
tracing = "0.1.40"

[features]
optimism = [
    "reth-primitives/optimism",
]
